MA-560 add mode to disable tree positions (#28)
* Remove unused code.

* Add enable.post.load.computations to skip tree position calculations and other post load processes.

* Add enable.post.load.computations to skip tree position calculations and other post load processes.

* MA-560: Fix merge conflicts

* Remove unused code

* Refactor load for computeing ancestors

* Remove unsed methods

* Eliminate duplicate properties.

* Set syndication URL to production site.

* Add method to compute tree positions. Remove comments for @Override methods. Remove unused code.

* Add env variable for ENABLE_POST_LOAD_COMPUTATIONS. Update CMD for warning.

* Allow JAVA OPTS to be overwritten for Xmx setting.

* Allow overriding TERMHUB_URL.

* Add missing file.

---------

Co-authored-by: = <=>