@@ -1,2 +1,3 @@
 #!/bin/sh
-java -Xmx2048M -Xms512M -XX:+UseStringDeduplication -Dspring.profiles.active=deploy -jar open-termhub-*.jar
+echo "Starting application..."
+java ${JAVA_OPTS:=} -Xms512M -XX:+UseZGC -XX:+UseStringDeduplication -Dspring.profiles.active=deploy -jar open-termhub-*.jar
